--- a/index.html
+++ b/index.html
@@ -98,8 +98,11 @@
                 <p class="future-description">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p> 
                 <p>Email:info@gmail <br>
                     Phone:0124357822
-                
-                </p>    
+                </p>
+                <img src="./images/icons/fb.png" alt="">
+                <img src="./images/icons/twitter.png" alt="">
+                <img src="./images/icons/youtube.png" alt="">
+                   
             </div>
             <div class="subscribe"> 
                 <h4 class="subs-title">Subscribe</h4>
