footer complete and fixed

--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             <div class="future">
                 <h2 class="future-title">Future</h2>
                 <p class="future-description">There are many variations of passages of Lorem Ipsum <br> available, but the majority have suffered alteration in some <br> form, by injected humour, or randomised words</p> 
-                <p>Email:info@gmail <br>
-                    Phone:0124357822
-                </p>
+                <p class="contact">Email:persional@gmail</p>  
+                <p class="contact">Phone:01700886655</p>
+                
                 <img src="./images/icons/fb.png" alt="">
                 <img src="./images/icons/twitter.png" alt="">
                 <img src="./images/icons/youtube.png" alt="">
@@ -106,7 +106,7 @@
             </div>
             <div class="subscribe"> 
                 <h4 class="subs-title">Subscribe</h4>
-                <input type="email" name="" id="email" placeholder=" Enter Your Email">
+                <input type="email" name="" id="email" placeholder=" Enter Your Email"> <br>
                 <button class="subscribe-btn">Subscribe</button>
 
             </div>
