fix header content align

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="header">
-            <div class="banner"> <br> <br> <br> <br> <br> <br> <br> <br> <br>
+            <div class="banner"> <br> <br> <br> <br> <br> 
                <div class="banner-title"> <h3>All Thinks Are </h3>
                 <h3>Possible If you</h3>
                 <h3>believe</h3>
