added a extra section and fix some problem

--- a/index.html
+++ b/index.html
@@ -48,6 +48,25 @@
         </section>
         <!-- end section one -->
 
+<!-- added extra section -->
+
+<section class="extra">
+   
+      <div class="extra-content">
+        <div class="extra-content-title">
+            <h2 class="my-dream-title">My Dreams</h2>
+            <h3 class="dreams-title">I Wanna Be A Software Developer</h3>
+            <h4 class="dreams-title">Here Put My Dreams Story</h4>
+            <p class="dream-description">Lorem ipsum dolor sit amet, consectetur adipisicing <br>  elit. Iste dolores doloremque necessitatibus quos sint eius quidem culpa, <br> similique, fugit distinctio optio minus est temporibus . Lorem ipsum<br> dolor sit  amet consectetur adipisicing elit. Rerum, inventore  </p>
+            <div><img class="dream-img" src="./images/coder.png" alt=""></div>
+            
+        </div>
+        <div class="dream-img">
+            <img src="./images/software dev.jpg" alt="">
+        </div>
+      </div>
+</section>
+
         <!-- start section tow my plans-->
 
         <section> 
